# molinuevobuildings

./: .gitignore  README.md  building_energy_process.py  input.json  pyproject.toml
building_stock_energy_model/: constants.py  model.py  validator.py
database/: 01-ACH.csv  02-BaseTemperatures.csv  03-BES_Capacity.csv  04-BES_CAPEX.csv  05-BES_OPEX.csv  06-DemandNinja_Radiation_DB.csv  07-DemandNinja_Temperature_DB.csv  08-DHW&InternalGains.csv  09-DwellingSizeAndShare.csv  10-ES21.csv  11-ES21_Radiation.csv  12-ES21_Temperatures.csv  13-R_T_hh_eff.xlsx  14-RES.csv  15-RES_hh_tes.xlsx  16-RetrofittingCost.csv  17-RetrofittingUValues.csv  19-SER_hh_tes.xlsx  20-SolarGainsNONOffice(Wm2).csv  21-SolarGainsOffice(Wm2).csv  22-UValues.csv  23-YearPeriods.csv  24-Sectors.csv  25-CategorizationShare.csv  26-Season.csv  27-Calendar.csv  28-Solar_parameter_buildings.json
docs/: .buildinfo  README.md  api_reference.html  example.html  genindex.html  getting_started.html  index.html  modules.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: api_reference.doctree  environment.pickle  example.doctree  getting_started.doctree  index.doctree  modules.doctree  overview.doctree
docs/_modules/: building_energy_process.html  index.html
docs/_sources/: example.rst.txt  getting_started.rst.txt  index.rst.txt  modules.rst.txt  overview.rst.txt
example/: README.md
tests/: output_test.csv  test_01_command_line.py  test_02_payload.py  test_03_database.py  test_04_execution.py
usecases/: ES21_preprocess.csv  ES21_solar.csv
(+4 files in other folders)
